set some xml nodes as optional. changed defaults

--- a/configs/metaheuristicConfig/nsgaii.properties
+++ b/configs/metaheuristicConfig/nsgaii.properties
@@ -32,13 +32,13 @@
 #Comment the lines were you want to use the default value
 #if something does not work see NSGAII_Setings
 #default SBXCrossover
-crossoverOperator_ = SinglePointCrossover
+crossoverOperator_ = SBXCrossover
 #default PolynomialMutation
-mutationOperator_ = BitFlipMutation
+mutationOperator_ = PolynomialMutation
 #default BinaryTournament2
 selectionOperator_ = BinaryTournament2
 #default 100
-populationSize_ = 2
+populationSize_ = 100
 #default 25000
 maxEvaluations_ = 25000
 #default 1/nr of variables
