--- a/configs/metaheuristicConfig/smpso.properties
+++ b/configs/metaheuristicConfig/smpso.properties
@@ -33,7 +33,7 @@
 #if something does not work see NSGAII_Setings
 
 #default 
-mutationOperator_ = BitFlipMutation
+mutationOperator_ = PolynomialMutation
 #default 
 swarmSize_ = 100
 #default 
@@ -45,7 +45,7 @@ mutationProbability_ = 0.16
 #default 20
 mutationDistributionIndex_ = 20
 #default
-crossoverOperator_ = SinglePointCrossover
+crossoverOperator_ = SBXCrossover
 
 
 
