--- a/configs/metaheuristicConfig/spea2real.properties
+++ b/configs/metaheuristicConfig/spea2real.properties
@@ -35,9 +35,12 @@
 crossoverOperator_ = SBXCrossover
 #default PolynomialMutation
 mutationOperator_ = PolynomialMutation
-#default selection can not be set
+#default BinaryTournament2
+selectionOperator_ = BinaryTournament2
 #default 100
 populationSize_ = 100
+#default 100
+archiveSize_ = 100
 #default 25000
 maxEvaluations_ = 10000
 #default 1/nr of variables
@@ -48,5 +51,4 @@ crossoverProbability_ = 0.9
 mutationDistributionIndex_ = 20
 #default 20
 crossoverDistributionIndex_ = 20
-bisections_ = 5
 
