--- a/configs/metaheuristicConfig/nsga2int.properties
+++ b/configs/metaheuristicConfig/nsga2int.properties
@@ -32,10 +32,11 @@
 #Comment the lines were you want to use the default value
 #if something does not work see NSGAII_Setings
 #default SBXCrossover
-crossoverOperator_ = SBXCrossover
+crossoverOperator_ = SinglePointCrossover
 #default PolynomialMutation
-mutationOperator_ = PolynomialMutation
-#default selection can not be set
+mutationOperator_ = BitFlipMutation
+#default BinaryTournament2
+selectionOperator_ = BinaryTournament2
 #default 100
 populationSize_ = 100
 #default 25000
@@ -48,5 +49,4 @@ crossoverProbability_ = 0.9
 mutationDistributionIndex_ = 20
 #default 20
 crossoverDistributionIndex_ = 20
-bisections_ = 5
 
